--- a/.gitmodules
+++ b/.gitmodules
@@ -42,10 +42,10 @@
 	url = https://github.com/vim-scripts/bufexplorer.zip
 [submodule "Align.vim"]
 	path = Align.vim
-	url = https://github.com/vim-scripts/Align
+	url = https://github.com/spicyjack/Align
 [submodule "taglist.vim"]
 	path = taglist.vim
-	url = https://github.com/vim-scripts/taglist.vim
+	url = https://github.com/spicyjack/taglist.vim
 [submodule "TaskList.vim"]
 	path = TaskList.vim
 	url = https://github.com/vim-scripts/TaskList.vim
@@ -54,7 +54,7 @@
 	url = https://github.com/xuhdev/syntax-dosini.vim
 [submodule "spicyjacks_plugins.vim"]
 	path = spicyjacks_plugins.vim
-	url = git@github.com:spicyjack/plugins.vim.git
+	url = https://github.com/spicyjack/plugins.vim.git
 [submodule "plantuml-syntax"]
 	path = plantuml-syntax
 	url = https://github.com/aklt/plantuml-syntax.git
