--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/vim-scripts/ciscoasa.vim
 [submodule "html5-syntax.vim"]
 	path = html5-syntax.vim
-	url = http://github.com/othree/html5-syntax.vim
+	url = https://github.com/othree/html5-syntax.vim
 [submodule "vim-json"]
 	path = vim-json
 	url = https://github.com/elzr/vim-json
