--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "plantuml-syntax"]
 	path = plantuml-syntax
 	url = https://github.com/aklt/plantuml-syntax.git
+[submodule "pgsql.vim"]
+	path = pgsql.vim
+	url = https://github.com/exu/pgsql.vim
