--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "syntastic"]
 	path = syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "vim-swift"]
+	path = vim-swift
+	url = https://github.com/kballard/vim-swift
