--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "vim-gitignore"]
 	path = vim-gitignore
 	url = https://github.com/gisphm/vim-gitignore.git
+[submodule "applescript.vim"]
+	path = applescript.vim
+	url = https://github.com/Tyilo/applescript.vim.git
