bundles: added 'nginx.vim' bundle, updated .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "dhcpd.vim"]
 	path = dhcpd.vim
 	url = spicyjack:vim-scripts/dhcpd.vim.git
+[submodule "nginx.vim"]
+	path = nginx.vim
+	url = https://github.com/chr4/nginx.vim.git
